fix whitespace/scrolling issue of modal

--- a/app/client/stylesheets/style.less
+++ b/app/client/stylesheets/style.less
@@ -222,6 +222,7 @@ table.collapsed {
     margin: 0px;
     width: 100%;
     height: 100%;
+    overflow-y: auto;
   }
   .questionOverview {
     color: white;
